@@ -5,7 +5,11 @@
 	registered with atexit and an isGrantChildProcess variables is used to
 	allow only the middle process to delete the shared memory segments.
 	* pipe.c:
-	Changes many debug calls from trace to TRACE.
+	Changed many debug calls from trace to TRACE.
+	New messages are generated using dbmail_message_construct.
+	* dbmail-message.c, check_dbmail_message.c:
+	Changed order of sender, recipient arguments to recipient, sender in
+	dbmail_message_construct.
 
 2006-10-21  Paul J Stevens <paul@nfg.nl>
 
